# ELT_project_live_jornada

./: .gitignore  EL_app.py  FEATURES_IMPLEMENTATION_PLAN.md  README.md  main.ipynb  pyproject.toml
ecommerce/: .user.yml  dbt_project.yml  prd.md  profiles.yml
ecommerce/models/Gold/customer_success/: gold_clientes_segmentacao.sql
ecommerce/models/Gold/pricing/: gold_precos_competitividade.sql
ecommerce/models/Gold/sales/: gold_vendas_temporais.sql
ecommerce/models/Silver/: silver_produtos.sql
